--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,7 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "beautifulsoup4>=4.14.3",
     "fastapi>=0.129.0",
+    "httpx>=0.28.1",
+    "playwright>=1.58.0",
     "python-dotenv>=1.2.1",
     "supabase>=2.28.0",
     "uvicorn>=0.41.0",
