--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "beautifulsoup4>=4.14.3",
     "fastapi>=0.129.0",
     "httpx>=0.28.1",
+    "pdfplumber>=0.11.9",
     "playwright>=1.58.0",
     "python-dotenv>=1.2.1",
     "supabase>=2.28.0",
